[gd_scene load_steps=10 format=4 uid="uid://d0scq2kiik7eg"]

[ext_resource type="TileSet" uid="uid://bmvirlxj6k75g" path="res://tilesets/Ground.tres" id="1_2qhos"]
[ext_resource type="Script" uid="uid://b0nogth75m3wt" path="res://scripts/levels/ch-1/act-1/TestLevel.gd" id="1_6wakj"]
[ext_resource type="PackedScene" uid="uid://c760d8xvto2hb" path="res://scenes/misc/characters/Player.tscn" id="2_yp4xu"]
[ext_resource type="Script" uid="uid://biw62eexocn8h" path="res://scripts/custom_nodes/ChapterNode.gd" id="3_ic7en"]
[ext_resource type="Texture2D" uid="uid://c478va0nkl3wc" path="res://assets/misc/godot.svg" id="5_fa7ng"]
[ext_resource type="Script" uid="uid://dfgbfrsk1hwar" path="res://scripts/misc/utils/CutsceneManager.gd" id="6_5iufs"]
[ext_resource type="Texture2D" uid="uid://n6m7427we6lr" path="res://assets/sprites/characters/evie/evie.png" id="6_eohsa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_unmxv"]
radius = 24.0208

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r34lv"]
radius = 14.0
height = 54.0

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_6wakj")

[node name="ChapterNode" type="Node" parent="."]
script = ExtResource("3_ic7en")
chapter_name = "The Test Level"
chapter_num = -1
act_name = "The Test Act"
act_num = -1

[node name="TileMap-Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAEAAAAAAAEAAAAEAAEAAAAAAAIAAAAEAAEAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAIAAAAAAAcAAAAEAAEAAAAAAAgAAAAEAAEAAAAAAAkAAAAEAAEAAAAAAAoAAAAEAAEAAAAAAAsAAAAEAAEAAAAAAAwAAAAEAAEAAAAAAA0AAAAEAAEAAAAAAA4AAAAEAAEAAAABAAAAAAAEAAEAAAABAAEAAAAEAAEAAAABAAIAAAAEAAEAAAABAAMAAAABAAAAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAAFAAAAAAABAAcAAAAAAAIAAAABAAgAAAAAAAAAAAABAAkAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAIAAAABAA4AAAAEAAEAAAACAAAAAAAEAAEAAAACAAEAAAAEAAEAAAACAAIAAAAEAAEAAAACAAMAAAACAAAAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAACAAYAAAADAAIAAAACAAcAAAABAAIAAAACAAgAAAABAAAAAAACAAkAAAADAAAAAAACAAoAAAADAAEAAAACAAsAAAADAAEAAAACAAwAAAADAAIAAAACAA0AAAABAAIAAAACAA4AAAAEAAEAAAADAAAAAAAEAAEAAAADAAEAAAAEAAEAAAADAAIAAAAAAAAAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAIAAAADAAYAAAABAAAAAAADAAcAAAABAAIAAAADAAgAAAABAAAAAAADAAkAAAAEAAAAAAADAAoAAAAEAAEAAAADAAsAAAAAAAAAAAADAAwAAAAFAAIAAAADAA0AAAABAAIAAAADAA4AAAAEAAEAAAAEAAAAAAAEAAEAAAAEAAEAAAAEAAEAAAAEAAIAAAABAAAAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAIAAAAEAAYAAAACAAAAAAAEAAcAAAACAAIAAAAEAAgAAAABAAAAAAAEAAkAAAAFAAAAAAAEAAoAAAAFAAEAAAAEAAsAAAAFAAIAAAAEAAwAAAABAAEAAAAEAA0AAAABAAIAAAAEAA4AAAAEAAEAAAAFAAAAAAAEAAEAAAAFAAEAAAAEAAEAAAAFAAIAAAABAAAAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAIAAAAFAAYAAAAEAAEAAAAFAAcAAAAEAAEAAAAFAAgAAAACAAAAAAAFAAkAAAADAAIAAAAFAAoAAAABAAEAAAAFAAsAAAADAAAAAAAFAAwAAAADAAIAAAAFAA0AAAABAAIAAAAFAA4AAAAEAAEAAAAGAAAAAAAEAAEAAAAGAAEAAAAEAAEAAAAGAAIAAAABAAAAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAIAAAAGAAYAAAAEAAEAAAAGAAcAAAAEAAEAAAAGAAgAAAAEAAEAAAAGAAkAAAACAAAAAAAGAAoAAAADAAIAAAAGAAsAAAAFAAAAAAAGAAwAAAAFAAIAAAAGAA0AAAABAAIAAAAGAA4AAAAEAAEAAAAHAAAAAAAEAAEAAAAHAAEAAAAEAAEAAAAHAAIAAAABAAAAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAAFAAAAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAIAAAAHAAkAAAAEAAEAAAAHAAoAAAACAAAAAAAHAAsAAAACAAEAAAAHAAwAAAACAAEAAAAHAA0AAAACAAIAAAAHAA4AAAAEAAEAAAAIAAAAAAAEAAEAAAAIAAEAAAAEAAEAAAAIAAIAAAABAAAAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAIAAgAAAAEAAAAAAAIAAkAAAAEAAEAAAAIAAoAAAAEAAEAAAAIAAsAAAAEAAEAAAAIAAwAAAAEAAEAAAAIAA0AAAAEAAEAAAAIAA4AAAAEAAEAAAAJAAAAAAAEAAEAAAAJAAEAAAAEAAEAAAAJAAIAAAABAAAAAAAJAAMAAAABAAEAAAAJAAQAAAADAAAAAAAJAAUAAAADAAEAAAAJAAYAAAADAAIAAAAJAAcAAAABAAEAAAAJAAgAAAAFAAAAAAAJAAkAAAAAAAIAAAAJAAoAAAAEAAEAAAAJAAsAAAAEAAEAAAAJAAwAAAAEAAEAAAAJAA0AAAAEAAEAAAAJAA4AAAAEAAEAAAAKAAAAAAAEAAEAAAAKAAEAAAAEAAEAAAAKAAIAAAABAAAAAAAKAAMAAAABAAEAAAAKAAQAAAAEAAAAAAAKAAUAAAAEAAEAAAAKAAYAAAAEAAIAAAAKAAcAAAABAAEAAAAKAAgAAAABAAEAAAAKAAkAAAAFAAAAAAAKAAoAAAAAAAIAAAAKAAsAAAAEAAEAAAAKAAwAAAAEAAEAAAAKAA0AAAAEAAEAAAAKAA4AAAAEAAEAAAALAAAAAAAEAAEAAAALAAEAAAAEAAEAAAALAAIAAAABAAAAAAALAAMAAAABAAEAAAALAAQAAAAEAAAAAAALAAUAAAAEAAEAAAALAAYAAAACAAAAAAALAAcAAAADAAIAAAALAAgAAAABAAEAAAALAAkAAAABAAEAAAALAAoAAAAFAAAAAAALAAsAAAAAAAIAAAALAAwAAAAEAAEAAAALAA0AAAAEAAEAAAALAA4AAAAEAAEAAAAMAAAAAAAEAAEAAAAMAAEAAAAEAAEAAAAMAAIAAAABAAAAAAAMAAMAAAABAAEAAAAMAAQAAAAFAAAAAAAMAAUAAAAAAAIAAAAMAAYAAAAEAAEAAAAMAAcAAAACAAAAAAAMAAgAAAACAAEAAAAMAAkAAAADAAIAAAAMAAoAAAABAAEAAAAMAAsAAAAFAAAAAAAMAAwAAAAAAAIAAAAMAA0AAAAEAAEAAAAMAA4AAAAEAAEAAAANAAAAAAAEAAEAAAANAAEAAAAEAAEAAAANAAIAAAABAAAAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAIAAAANAAYAAAAEAAEAAAANAAcAAAAEAAEAAAANAAgAAAAEAAEAAAANAAkAAAACAAAAAAANAAoAAAADAAIAAAANAAsAAAABAAEAAAANAAwAAAABAAIAAAANAA0AAAAEAAEAAAANAA4AAAAEAAEAAAAOAAAAAAAEAAEAAAAOAAEAAAAEAAEAAAAOAAIAAAABAAAAAAAOAAMAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAIAAAAOAAYAAAAEAAEAAAAOAAcAAAAEAAEAAAAOAAgAAAAAAAAAAAAOAAkAAAAFAAEAAAAOAAoAAAAFAAIAAAAOAAsAAAABAAEAAAAOAAwAAAABAAIAAAAOAA0AAAAEAAEAAAAOAA4AAAAEAAEAAAAPAAAAAAAEAAEAAAAPAAEAAAAEAAEAAAAPAAIAAAABAAAAAAAPAAMAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAAFAAAAAAAPAAYAAAAAAAIAAAAPAAcAAAAEAAEAAAAPAAgAAAABAAAAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAPAAsAAAABAAEAAAAPAAwAAAABAAIAAAAPAA0AAAAEAAEAAAAPAA4AAAAEAAEAAAAQAAAAAAAEAAEAAAAQAAEAAAAEAAEAAAAQAAIAAAABAAAAAAAQAAMAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAABAAEAAAAQAAYAAAAFAAAAAAAQAAcAAAAFAAEAAAAQAAgAAAAFAAIAAAAQAAkAAAABAAEAAAAQAAoAAAABAAEAAAAQAAsAAAABAAEAAAAQAAwAAAABAAIAAAAQAA0AAAAEAAEAAAAQAA4AAAAEAAEAAAARAAAAAAAEAAEAAAARAAEAAAAEAAEAAAARAAIAAAACAAAAAAARAAMAAAACAAEAAAARAAQAAAACAAEAAAARAAUAAAACAAEAAAARAAYAAAACAAEAAAARAAcAAAACAAEAAAARAAgAAAACAAEAAAARAAkAAAACAAEAAAARAAoAAAACAAEAAAARAAsAAAACAAEAAAARAAwAAAACAAIAAAARAA0AAAAEAAEAAAARAA4AAAAEAAEAAAASAAAAAAAEAAEAAAASAAEAAAAEAAEAAAASAAIAAAAEAAEAAAASAAMAAAAEAAEAAAASAAQAAAAEAAEAAAASAAUAAAAEAAEAAAASAAYAAAAEAAEAAAASAAcAAAAEAAEAAAASAAgAAAAEAAEAAAASAAkAAAAEAAEAAAASAAoAAAAEAAEAAAASAAsAAAAEAAEAAAASAAwAAAAEAAEAAAASAA0AAAAEAAEAAAASAA4AAAAEAAEAAAATAAAAAAAEAAEAAAATAAEAAAAEAAEAAAATAAIAAAAEAAEAAAATAAMAAAAEAAEAAAATAAQAAAAEAAEAAAATAAUAAAAEAAEAAAATAAYAAAAEAAEAAAATAAcAAAAEAAEAAAATAAgAAAAEAAEAAAATAAkAAAAEAAEAAAATAAoAAAAEAAEAAAATAAsAAAAEAAEAAAATAAwAAAAEAAEAAAATAA0AAAAEAAEAAAATAA4AAAAEAAEAAAA=")
tile_set = ExtResource("1_2qhos")

[node name="QuestGodots" type="Node2D" parent="."]

[node name="Godot1" type="Area2D" parent="QuestGodots" groups=["interactable"]]
position = Vector2(578, 425)

[node name="Sprite2D" type="Sprite2D" parent="QuestGodots/Godot1"]
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_fa7ng")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestGodots/Godot1"]
shape = SubResource("CircleShape2D_unmxv")
metadata/_edit_lock_ = true

[node name="Godot2" type="Area2D" parent="QuestGodots" groups=["interactable"]]
position = Vector2(245, 399)

[node name="Sprite2D" type="Sprite2D" parent="QuestGodots/Godot2"]
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_fa7ng")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestGodots/Godot2"]
shape = SubResource("CircleShape2D_unmxv")
metadata/_edit_lock_ = true

[node name="EvieButNPC" type="Area2D" parent="." groups=["interactable"]]
position = Vector2(520, 120)

[node name="Sprite2D" type="Sprite2D" parent="EvieButNPC"]
texture = ExtResource("6_eohsa")
hframes = 5
vframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EvieButNPC"]
shape = SubResource("CapsuleShape2D_r34lv")

[node name="Player" parent="." instance=ExtResource("2_yp4xu")]
position = Vector2(150, 100)

[node name="CutsceneManager" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("6_5iufs")
player = NodePath("../Player")

[connection signal="body_entered" from="QuestGodots/Godot1" to="." method="_on_godot_1_body_entered"]
[connection signal="body_exited" from="QuestGodots/Godot1" to="." method="_on_godot_1_body_exited"]
[connection signal="body_entered" from="QuestGodots/Godot2" to="." method="_on_godot_2_body_entered"]
[connection signal="body_exited" from="QuestGodots/Godot2" to="." method="_on_godot_2_body_exited"]
